		back to the Php adapter.
		 ***NOTE*** This changes the API for the function so all users of the extension will have to
		upgrade to at least v1.1.0, or the code will generate errors.
		  https://github.com/niel/php-yenc/releases
2016-09-14 DariusIII
	Add: TinyMCE editor support to forum and admin->content
2016-09-12 niel
	Chg: Refactor scripts using nzedb\db\Settings class without actually using any of the class'
		additional features, to use the parent nzedb\db\DB class. This is to let me work on
		moving the scripts that DO need the additional features over to using app\models\Settings
		instead and properly separating business logic from the way models get used.
2016-09-08 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.6.4.1


2016-09-08 niel
	Add: Travis icons for Latest-testing and dev branches.
2016-09-08 kevin123
	Add: Travis build icon for stable branch on README.md
2016-09-07 niel
	Fix: Wrap $this->release['group_name'] in an isset check before assignment to avoid missing
		index error reported in issue #2259.
2016-09-06 niel
	Fix: Prevent yEnc from configuring all adapters during install process, as that would require
		Db access which isn't available yet. Closes issue #2257.
	Fix: Have the yEnc adapters use the PHP adapter for decodeIgnore(). Slow but it what happened before.
2016-09-05 DariusIII
	Fix: Content display for not logged in users in Charisma/Gamma/Gentele/Omicron themes.
2016-09-05 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.6.4.0


2016-09-01 niel
	Fix: Update new yenc extension's adapter class.
2016-08-31 DariusIII
	Fix: Sorting arrows on admin->user-list page
2016-08-29 niel
	Mrg: dev-yenc-abstraction branch. This branch unifies our yenc code to use a single class.
		Lithium adapters are used for the available methods, the best available is
		automatically configured as the default.
		  No user configuration should be needed, except for the path to ydecode in the settings as